implemented get user
